--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-# Photo Organizer Dependencies
-Pillow>=9.0.0
-ExifRead>=3.0.0
-pandas>=1.5.0
-numpy>=1.24.0
-python-dateutil>=2.8.0
-pathlib2>=2.3.0
-
-# Enhanced EXIF Analyzer Dependencies
-PyYAML>=6.0
+# Core dependencies
 tqdm>=4.64.0
-psutil>=5.9.0  # For system monitoring 
+PyYAML>=6.0
+Pillow>=9.0.0
+
+# Optional: Claude AI integration
+requests>=2.28.0
+
+# Development dependencies
+pytest>=7.0.0
+pytest-cov>=4.0.0 
